# opendox

./: ,opendox.yml  .gitignore  LICENSE  README.md  build_docs.py  clean_bom.py  debug_parser.py  debug_requests.py  generate_docs.py  generate_sample_docs.py  init_directories.py  pyproject.toml  setup_sample_project.py  targeted_docs.py  test_llm.py  test_multilang.py  test_pipeline.py  test_sample.py  test_setup.py  validate_opendox.py
.opendox/: cache.json
cache_test/: mkdocs.yml
cache_test/docs/: index.md
cache_test/docs/api/: cache.md  config_loader.md  error_handler.md  pipeline.md
docs_output/: generation_summary.json  mkdocs.yml  requirements.txt
docs_output/docs/: index.md
docs_output/docs/api/: app.md  build_docs.md  cache.md  cache_manager.md  config.md  config_loader.md  error_handler.md  main.md  test_parser.md  test_pipeline.md
full_test/: mkdocs.yml
full_test/docs/: index.md
full_test/docs/api/: cache.md  config_loader.md  error_handler.md  file_discovery.md  llm_generator.md  main.md  mkdocs_formatter.md  pipeline.md
sample_app/: auth.go
sample_app/.opendox/: cache.json  state.duckdb
sample_app/backend/: app.py
sample_app/frontend/: api.js  components.tsx
sample_docs/: mkdocs.yml
sample_docs/docs/: index.md  statistics.md
sample_docs/docs/api/: api.md  app.md  auth.md  components.md
src/opendox/: __init__.py  __main__.py
src/opendox/.opendox/: cache.json  state.duckdb
src/opendox/cli/: __init__.py  main.py
src/opendox/core/: cache.py  (+6 more)
test_docs/: mkdocs.yml
test_docs/docs/: index.md
tests/: test_parser.py
(+13 files in other folders)
