[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opendox"
version = "0.0.1"
description = "Automated technical documentation generator"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "pygithub>=2.1.1",
    "gitpython>=3.1.40",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.scripts]
opendox = "opendox.cli:main"